upgrade layout, fix overflow and fetch capital API

--- a/src/core/Main.css
+++ b/src/core/Main.css
@@ -1,150 +1,10 @@
 .main{
     display: flex;
-    height: 830px;
+    height: auto;
     /*background color for main part*/
     background-color: rgba(255, 255, 255, 1);
     justify-content: center;
     align-items: center;
     margin: 0px;
     padding: 0px;
-}
-
-.cac{
-  max-width: 700px;
-  margin: 20px auto;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  background-color: white;
-}
-
-.selectBox{
-    padding: 10px;
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-top: 10px;
-}
-.selectBox select{
-    width: 600px;
-}
-
-
-select:hover, input:hover{
-    transform: translateY(-3px);
-}
-
-.searchBox{
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    margin-bottom: 20px;
-}
-
-.selectBox select, input{
-    font-size: 15px;
-    padding: 10px;
-    border: 1px black solid;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
-}
-
-.searchBox input{
-    margin-top: 10px;
-}
-
-.toggleSearchButton{
-    cursor: pointer;
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px;
-    border: black 1px solid;
-    transition: transform 0.3s ease;
-}
-
-.toggleSearchButton:hover{
-    transform: scale(1.02);
-    background-color: rgb(220, 220, 220);
-}
-
-.searchBar{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    border: 1px solid black;
-    background-color: white;
-    animation: slideInUp 1s;
-}
-
-.searchBar select, input{
-    font-size: 15px;
-    padding: 10px;
-    border: 1px black solid;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
-    width: 95%;
-}
-
-.clearButton{
-    cursor: pointer;
-    padding: 10px;
-    margin-top: 10px;
-    background-color: rgb(183, 133, 133);
-    transition: transform 0.3s ease;
-    width: 200px;
-    border-radius: 10px;
-}
-.clearButton:hover{
-    background-color: rgb(238, 100, 100);
-    transform: translateY(-3px);
-}
-
-.clearButton2{
-    background-color: rgb(183, 133, 133);
-    cursor: pointer;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 10px;
-    transition: transform 0.3s ease;
-}
-.clearButton2:hover{
-    background-color: rgb(238, 100, 100);
-    transform: translateY(-3px);
-}
-
-.mainFunctionDiv{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.countryInfo{
-    padding: 10px;
-    border: 1px solid black;
-    border-radius: 10px;
-    background-color: white;
-    margin-top: 10px;
-}
-
-.jumpToGM {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-top: 30px;
-  cursor: pointer;
-  border-radius: 8px;
-  transition: transform 0.3s ease;
-  width: 97%;
-}
-
-.jumpToGM:hover {
-  background-color: #45a049;
-  transform: translateY(-3px);
 }
